# xpshader

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: CMakeCache.txt  CMakeList.txt  CMakeLists.txt  Makefile  cloud_puff0.xcf  cmake_install.cmake  loadpng.c  main.m  makeobj.sh  testbed.c  testbed.h  testbed_triangle.c  xpdraw.c  xpdraw.h  xpdrawcoord.c  xpdrawcoord.h  xpdrawtexture.c  xpdrawtexture.c~  xpdrawtexture.h  xpdrawtexture.h~  xpinterface.h  xpopengl.c  xpopengl.h  xppixel.c  xppixel.h  xps.c  xpscene.c  xpscene.h  xputil.c  xputil.h
